--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>You Are An Idiot!</title>
+    <title>You got BEANED!</title>
+
 </head>
 <body id="bodyEl">
     <h1 id="title"></h1>
@@ -13,6 +14,9 @@
             margin-top: 50px;
             font-size: 100px;
         }
+	    body {
+  	background-image: url('img_girl.jpg');
+	}
     </style>
     <script>
         const title = document.getElementById('title')
@@ -22,7 +26,7 @@
 
         let nextAn = 1
         let indexN = 0
-        let wordlist = ['you', 'are', 'an', 'idiot']
+        let wordlist = ['BEAN', 'BEAN', 'BEAN', 'BEAN']
         let popups = [window]
 
         function getRandomCordinats(){
