--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             margin-top: 50px;
             font-size: 100px;
         }
-	    body {
-  	background-image: url('img_girl.jpg');
+	body{
+  	    background-image: url('/assets/beans.jpg');
 	}
     </style>
     <script>
