--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-size: 100px;
         }
 	body{
-  	    background-image: url('/assets/beans.jpg');
+  	    background-image: url('/assets/beans.png');
 	}
     </style>
     <script>
