--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             margin-top: 50px;
             font-size: 100px;
         }
-	body{
-  	    background-image: url('/assets/beans.png');
-	}
+	body {
+            background-image: url('/assets/beans.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     </style>
     <script>
         const title = document.getElementById('title')
