--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             font-size: 100px;
         }
 	body {
-            background-image: url('/assets/beans.png');
+            background-image: url('assets/beans.png');
             background-repeat: no-repeat;
             background-size: cover;
         }
