--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 </head>
 <body id="bodyEl">
+	<img src="assets/beans.png">
     <h1 id="title"></h1>
 
     <style>
@@ -13,11 +14,6 @@
             text-align: center;
             margin-top: 50px;
             font-size: 100px;
-        }
-	body {
-            background-image: url('assets/beans.png');
-            background-repeat: no-repeat;
-            background-size: cover;
         }
     </style>
     <script>
