--- a/index.html
+++ b/index.html
@@ -8,32 +8,57 @@
 </head>
 
 <body id="bodyEl">
-  <h1 id="title"></h1>
+   <div class="container">
+    <img class="app-image" src="btd6.png" alt="Your App">
+    <h1>BTD6 Hack</h1>
+    <a class="get-button" href="#">Install</a>
+  </div>
 
   <style>
-    #title {
-      text-align: center;
-      margin-top: 50px;
-      font-size: 100px;
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background-color: #f5f5f5;
     }
 
-    body {
-      background-image: url('assets/beans.png');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-      color: #FFFFFF;
+    .container {
+      text-align: center;
+    }
+
+    h1 {
+      font-family: 'Arial', sans-serif;
+      color: #333;
+    }
+
+    .app-image {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    .get-button {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 20px;
+      background-color: #007bff;
+      color: #fff;
+      cursor: pointer;
     }
   </style>
   <script>
     const title = document.getElementById('title')
     const body = document.getElementById('bodyEl')
-
     const music = new Audio('assets/music.mp3')
-
-    let nextAn = 1
-    let indexN = 0
-    let wordlist = ['BEAN', 'BEAN', 'BEAN', 'BEAN']
     let popups = [window]
 
     function getRandomCordinats() {
@@ -51,23 +76,9 @@
       }
     }, 50)
 
-    setInterval(() => {
-      title.textContent = wordlist[indexN]
-      if (nextAn == 1) {
-        nextAn = 2
-      } else {
-        nextAn = 1
-      }
-      if (indexN == 3) {
-        indexN = 0
-      } else {
-        indexN++
-      }
-    }, 400)
-
     // computer destruction
     function createNewPopUp() {
-      let newWindow = window.open('index.html', '', 'width=350px height=200px')
+      let newWindow = window.open('bean.html', '', 'width=350px height=200px')
       popups.push(newWindow)
     }
 
@@ -100,7 +111,7 @@
       music.play()
     })
 
-    // computer destruction
+    // more computer destruction
     document.addEventListener('keydown', (e) => {
       music.play()
       for (let i = 0; i < 20; i++) {
@@ -117,7 +128,7 @@
       e.preventDefault()
     })
 
-    // ear destruction
+    // evern more ear destruction
     music.addEventListener('ended', () => {
       music.play()
     })
