--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body id="bodyEl">
    <div class="container">
-    <img class="app-image" src="btd6.png" alt="Your App">
+    <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
     <h1>BTD6 Hack</h1>
-    <a class="get-button" href="#">Install</a>
+    <a class="get-button" href="#">INSTALL</a>
   </div>
 
   <style>
@@ -36,7 +36,7 @@
     }
 
     .app-image {
-      max-width: 100%;
+      max-width: 25%;
       height: auto;
       border-radius: 8px;
       margin-bottom: 20px;
