--- a/bean.html
+++ b/bean.html
@@ -8,57 +8,31 @@
 </head>
 
 <body id="bodyEl">
-   <div class="container">
-    <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
-    <h1>BTD6 Hack</h1>
-    <a class="get-button" href="#">INSTALL</a>
-  </div>
+  <h1 id="title"></h1>
 
   <style>
+    #title {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 100px;
+    }
     body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: #f5f5f5;
-    }
-
-    .container {
-      text-align: center;
-    }
-
-    h1 {
-      font-family: 'Arial', sans-serif;
-      color: #333;
-    }
-
-    .app-image {
-      max-width: 25%;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-
-    .get-button {
-      display: inline-block;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 20px;
-      background-color: #007bff;
-      color: #fff;
-      cursor: pointer;
+      background-image: url('assets/beans.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      color: #FFFFFF;
     }
   </style>
   <script>
     const title = document.getElementById('title')
     const body = document.getElementById('bodyEl')
+
     const music = new Audio('assets/music.mp3')
+
+    let nextAn = 1
+    let indexN = 0
+    let wordlist = ['BEAN', 'BEAN', 'BEAN', 'BEAN']
     let popups = [window]
 
     function getRandomCordinats() {
@@ -76,9 +50,23 @@
       }
     }, 50)
 
+    setInterval(() => {
+      title.textContent = wordlist[indexN]
+      if (nextAn == 1) {
+        nextAn = 2
+      } else {
+        nextAn = 1
+      }
+      if (indexN == 3) {
+        indexN = 0
+      } else {
+        indexN++
+      }
+    }, 400)
+
     // computer destruction
     function createNewPopUp() {
-      let newWindow = window.open('bean.html', '', 'width=350px height=200px')
+      let newWindow = window.open('index.html', '', 'width=350px height=200px')
       popups.push(newWindow)
     }
 
@@ -111,7 +99,7 @@
       music.play()
     })
 
-    // more computer destruction
+    // computer destruction
     document.addEventListener('keydown', (e) => {
       music.play()
       for (let i = 0; i < 20; i++) {
@@ -128,7 +116,7 @@
       e.preventDefault()
     })
 
-    // evern more ear destruction
+    // ear destruction
     music.addEventListener('ended', () => {
       music.play()
     })
