--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
     <h1>BTD6 Hack</h1>
-    <a class="get-button" href="/bean.html">INSTALL</a>
+    <a class="get-button" href="https://agenericapple.github.io/bean/bean.html">INSTALL</a>
   </div>
 
   <style>
