--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body id="bodyEl">
   <div class="container">
-    <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
-    <h1>BTD6 Hack</h1>
-    <a class="get-button" href="https://agenericapple.github.io/bean/bean.html">INSTALL</a>
+  <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
+    <div>
+      <h1>BTD6 HACK</h1>
+      <a class="get-button" href="https://agenericapple.github.io/bean/bean.html">INSTALL</a>
+    </div>
   </div>
 
   <style>
