--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 </head>
 
-<body id="bodyEl">
+<body>
   <div class="container">
   <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
-    <div>
+    <div class="container">
       <h1>BTD6 HACK</h1>
       <a class="get-button" href="https://agenericapple.github.io/bean/bean.html">INSTALL</a>
     </div>
