--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <img class="app-image" src="btd6.png" alt="BTD6 - Error 404 do !not! press INSTALL">
     <div class="container">
       <h1>BTD6 HACK</h1>
-      <a class="get-button" href="https://agenericapple.github.io/bean/bean.html">INSTALL</a>
+      <button class="get-button" onclick="window.location='https://agenericapple.github.io/bean/bean.html"'">INSTALL</button>
     </div>
   </div>
 
